# TAOCT4researchers

./: CONTRIBUTING.md  LICENCE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-update.md  feature_request.md
01UNIT - The Epistemology of Computation (foundations)/: CHANGELOG.md  Makefile  README.md  requirements.txt
01UNIT - The Epistemology of Computation (foundations)/assessments/: quiz.md  rubric.md  self_check.md
01UNIT - The Epistemology of Computation (foundations)/exercises/: homework.md
01UNIT - The Epistemology of Computation (foundations)/lab/: 01_turing_simulator.py  03_ast_interpreter.py  __init__.py  lab_01_01_turing_machine.py  lab_01_02_lambda_calculus.py  lab_01_03_ast_interpreter.py  lab_1_01_turing_machine.py  lab_1_02_lambda_calculus.py  lab_1_03_ast_interpreter.py
01UNIT - The Epistemology of Computation (foundations)/resources/: cheatsheet.md  further_reading.md
01UNIT - The Epistemology of Computation (foundations)/scripts/: validate_unit.py
01UNIT - The Epistemology of Computation (foundations)/tests/: __init__.py  conftest.py  test_lab_01_02.py  test_lab_01_03.py
01UNIT - The Epistemology of Computation (foundations)/theory/: 01UNIT_slides.html  01UNITslides.html  lecture_notes.md
02UNIT - Abstraction and Encapsulation (patterns)/: CHANGELOG.md  Makefile  README.md  requirements.txt
02UNIT - Abstraction and Encapsulation (patterns)/assessments/: quiz.md  rubric.md  self_check.md
02UNIT - Abstraction and Encapsulation (patterns)/exercises/: homework.md
02UNIT - Abstraction and Encapsulation (patterns)/lab/: __init__.py  lab_02_01_simulation_framework.py  lab_02_02_design_patterns.py  lab_2_01_simulation_framework.py
02UNIT - Abstraction and Encapsulation (patterns)/resources/: cheatsheet.md  further_reading.md  glossary.md
02UNIT - Abstraction and Encapsulation (patterns)/scripts/: validate_unit.py
02UNIT - Abstraction and Encapsulation (patterns)/tests/: __init__.py  conftest.py  test_lab_02_01.py  test_lab_02_02.py  test_lab_2_01.py  test_lab_2_02.py
02UNIT - Abstraction and Encapsulation (patterns)/theory/: 02UNIT_slides.html  learning_objectives.md  lecture_notes.md
03UNIT - Algorithmic Complexity (performance)/: CHANGELOG.md  Makefile  README.md  requirements.txt
03UNIT - Algorithmic Complexity (performance)/assessments/: quiz.md  rubric.md  self_check.md
03UNIT - Algorithmic Complexity (performance)/exercises/: homework.md
03UNIT - Algorithmic Complexity (performance)/lab/: __init__.py  lab_03_01_benchmark_suite.py  lab_03_02_complexity_analyser.py  lab_3_01_benchmark_suite.py  lab_3_02_complexity_analyser.py
03UNIT - Algorithmic Complexity (performance)/resources/: cheatsheet.md  further_reading.md
03UNIT - Algorithmic Complexity (performance)/scripts/: validate_unit.py
03UNIT - Algorithmic Complexity (performance)/tests/: conftest.py  test_lab_03_01.py  test_lab_03_02.py
03UNIT - Algorithmic Complexity (performance)/theory/: 03UNIT_slides.html  learning_objectives.md  lecture_notes.md
04UNIT - Advanced Data Structures (design)/: CHANGELOG.md  Makefile  README.md  requirements.txt
04UNIT - Advanced Data Structures (design)/assessments/: quiz.md  rubric.md  self_check.md
04UNIT - Advanced Data Structures (design)/exercises/: homework.md
04UNIT - Advanced Data Structures (design)/lab/: __init__.py  lab_04_01_graph_library.py  lab_04_02_probabilistic_ds.py  lab_4_01_graph_library.py  lab_4_02_probabilistic_ds.py
04UNIT - Advanced Data Structures (design)/resources/: cheatsheet.md  further_reading.md  glossary.md
04UNIT - Advanced Data Structures (design)/scripts/: validate_unit.py
04UNIT - Advanced Data Structures (design)/tests/: __init__.py  conftest.py  test_lab_04_01.py  test_lab_04_02.py
04UNIT - Advanced Data Structures (design)/theory/: 04UNITslides.html  learning_objectives.md  lecture_notes.md
05UNIT - Scientific Computing (simulations)/: CHANGELOG.md  Makefile  README.md  requirements.txt
05UNIT - Scientific Computing (simulations)/assessments/: quiz.md  rubric.md  self_check.md
05UNIT - Scientific Computing (simulations)/exercises/: homework.md
05UNIT - Scientific Computing (simulations)/lab/: 01_monte_carlo_ode.py  02_agent_based_modeling.py  __init__.py  lab_05_01_monte_carlo.py  lab_05_02_ode_solvers.py  lab_05_03_agent_based_modelling.py  lab_5_01_monte_carlo.py
05UNIT - Scientific Computing (simulations)/resources/: cheatsheet.md  further_reading.md  glossary.md
05UNIT - Scientific Computing (simulations)/scripts/: validate_unit.py
05UNIT - Scientific Computing (simulations)/tests/: __init__.py  conftest.py  test_lab_05_01.py  test_lab_05_02.py  test_lab_05_03.py  test_lab_5_01.py  test_lab_5_02.py  test_lab_5_03.py
05UNIT - Scientific Computing (simulations)/theory/: 05UNIT_slides.html  learning_objectives.md  lecture_notes.md  slides.html
06UNIT - Visualisation for Research (communication)/: CHANGELOG.md  Makefile  README.md  requirements.txt
06UNIT - Visualisation for Research (communication)/assessments/: quiz.md  (+2 more)
07UNIT - Reproducibility and Capstone (integration)/: CHANGELOG.md  Makefile  README.md  requirements.txt
08UNIT - Recursion and Dynamic Programming (algorithms)/: Makefile  README.md  requirements.txt
09UNIT - Exception Handling and Defensive Code (robustness)/: Makefile  README.md  requirements.txt
10UNIT - Data Persistence and Serialisation (storage)/: Makefile  README.md  requirements.txt
11UNIT - Text Processing and NLP Fundamentals (text analysis)/: Makefile  README.md  requirements.txt
12UNIT - Web APIs and Data Acquisition (web integration)/: Makefile  README.md  requirements.txt
13UNIT - Machine Learning for Researchers (ML basics)/: Makefile  README.md  requirements.txt
14UNIT - Parallel Computing and Scalability (performance+)/: Makefile  README.md  requirements.txt
docs/: curriculum.md  instructor_guide.md  pacing.md
scripts/: generate_badges.py  setup_environment.sh  validate_all_units.py
week1/: README.md
week2/: Makefile
(+626 files in other folders)
